# ETLPipelineSpark

./: .gitignore  README.md  pyproject.toml  tox.ini
Data/static/: MOCK_DATA.json
Data/stream/: MOCK_DATA (1).json  MOCK_DATA (2).json  MOCK_DATA (3).json  MOCK_DATA (4).json  MOCK_DATA (5).json  MOCK_DATA (6).json
Tests/: test_utils.py
config/: config.json  sparksubmitconfig.json
src/: static.py  streaming.py
src/DataClass/: DataClasses.py  streamingDataClass.py  transactions_dataclass.py
src/etlpipelinespark/: raw_txs_stream.py
src/exception/: CustomException.py
src/logger/: Logger.py
src/scripts/: run_query_hive.sh
src/sql/: create_streaming_ext.sql  create_table.sql  drop_table.sql
src/utils/: static.py  streaming.py  utils.py
